--- a/src/main/webapp/content/user/edit.xhtml
+++ b/src/main/webapp/content/user/edit.xhtml
@@ -5,18 +5,11 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/templates/default.xhtml">
 	
-	<f:metadata>
-		<f:viewParam
-			name="id" 
-			value="#{userAction.id}" />
-		<f:event 
-			type="preRenderView"
-			listener="#{userAction.load()}" />
-	</f:metadata>
-	
 	<ui:define name="content">
-	
-		<h1>#{empty userAction.id ? 'Regisztráció' : 'Felhasználó adatainak szerkesztése'}</h1>
+		<f:metadata>
+	    	<f:viewAction action="#{login.load}" />
+		</f:metadata>
+		<h1>#{empty login.id ? 'Regisztráció' : 'Felhasználó adatainak szerkesztése'}</h1>
 		
 		<h:form id="userEditForm">
 
@@ -26,7 +19,7 @@
 					value="Név: "/>
 				<h:inputText 
 					id="userName" 
-					value="#{userAction.entity.name}"
+					value="#{login.entity.name}"
 					required="true" />
 				<h:message 
 					for="userName" 
@@ -39,7 +32,7 @@
 					value="E-mail: "/>
 				<h:inputText 
 					id="userEmail" 
-					value="#{userAction.entity.email}"
+					value="#{login.entity.email}"
 					required="true" />
 				<h:message 
 					for="userEmail" 
@@ -52,7 +45,7 @@
 					value="Jelszó: "/>
 				<h:inputSecret 
 					id="userPassword" 
-					value="#{userAction.entity.password}"
+					value="#{login.entity.password}"
 					required="true" />
 				<h:message 
 					for="userPassword" 
@@ -65,7 +58,7 @@
 					value="Születési dátum: "/>
 				<h:inputText 
 					id="userBirthDate" 
-					value="#{userAction.entity.birthDate}"
+					value="#{login.entity.birthDate}"
 					required="true">
 					<f:convertDateTime pattern="yyyy. MM. dd." />
 				</h:inputText>
@@ -80,7 +73,7 @@
 					value="Ország: "/>
 				<h:inputText 
 					id="userCountry" 
-					value="#{userAction.entity.address.country}"
+					value="#{login.entity.address.country}"
 					required="true" />
 				<h:message 
 					for="userCountry" 
@@ -93,7 +86,7 @@
 					value="Város: "/>
 				<h:inputText 
 					id="userCity" 
-					value="#{userAction.entity.address.city}"
+					value="#{login.entity.address.city}"
 					required="true" />
 				<h:message 
 					for="userCity" 
@@ -106,7 +99,7 @@
 					value="Utca: "/>
 				<h:inputText 
 					id="userStreet" 
-					value="#{userAction.entity.address.street}"
+					value="#{login.entity.address.street}"
 					required="true" />
 				<h:message 
 					for="userStreet" 
@@ -119,7 +112,7 @@
 					value="Házszám: "/>
 				<h:inputText 
 					id="userNumber" 
-					value="#{userAction.entity.address.number}"
+					value="#{login.entity.address.number}"
 					required="true" />
 				<h:message 
 					for="userNumber" 
@@ -128,7 +121,7 @@
 			
 			<h:commandLink
 				value="Mentés" 
-				action="#{userAction.persist()}" />
+				action="#{login.persist}" />
 				
 			<h:link
 				value="Vissza"
