change user data

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -28,7 +28,7 @@
                  <h:message for="password" style="color:red" />
               </f:validateBean>
               <h:commandButton value="Bejelentkezés" action="#{login.login}"/>
-              <h:button value="Regisztráció" outcome="/content/user/edit"/>
+              <h:button value="Regisztráció" outcome="/content/user/register.xhtml"/>
            </h:panelGrid>
            
         </h:form>
