--- a/src/main/webapp/content/user-view.xhtml
+++ b/src/main/webapp/content/user-view.xhtml
@@ -13,22 +13,27 @@
     <ui:define name="content">
     
         <h:panelGroup layout="block" rendered="#{empty userController.user}">
-            <h1>Felhasználó</h1>
+            <span class="subtitle">Felhasználó</span>
             Nincs ilyen felhasználó.
         </h:panelGroup>
         
         <h:panelGroup layout="block" rendered="#{not empty userController.user}">
-            <h1>#{userController.user.name}</h1>
+            <span class="subtitle">#{userController.user.name}</span>
             <h:panelGroup layout="block" rendered="#{userController.user.id == indexController.userId()}">
                 <h:link value="Szerkesztés" outcome="/content/user-edit.xhtml"/>
             </h:panelGroup>
-            <div>email: #{userController.user.email}</div>
-            <div>
+            <h:panelGroup layout="block" rendered="#{userController.user.id != indexController.userId()}">
+                <h:link value="Üzenet" outcome="/content/message.xhtml">
+                    <f:param name="u" value="#{userController.user.id}" />
+                </h:link>
+            </h:panelGroup>
+            <p class="only-top-margin">
+                email: #{userController.user.email}<br />
                 született:
 				<h:outputText value="#{userController.user.birthDate}">
 				    <f:convertDateTime pattern="yyyy. MM. dd." />
 				</h:outputText>
-            </div>
+            </p>
         </h:panelGroup>
 
     </ui:define>
