--- a/src/main/webapp/content/user-list.xhtml
+++ b/src/main/webapp/content/user-list.xhtml
@@ -22,7 +22,7 @@
 			<h:column>
 				<div>
 					<h:link value="#{user.name}" outcome="/content/user-view.xhtml">
-					    <f:param name="u" value="#{user.id}" />
+					    <f:param name="u" value="#{user.id}" /><br/>
 					</h:link>
 				</div>
 				<div>
