--- a/src/main/webapp/content/home.xhtml
+++ b/src/main/webapp/content/home.xhtml
@@ -14,7 +14,7 @@
 	            Új üzenetek:<br />
 	            <ui:repeat value="#{userDAO.unseenMessageSenders}" var="user">
 	                <h:link value="#{user.name}" outcome="/content/message.xhtml">
-	                    <f:param name="u" value="#{user.id}" />
+	                    <f:param name="u" value="#{user.id}" /><br/>
 	                </h:link>
 	            </ui:repeat>
             </p>
