--- a/src/main/webapp/content/msg-stat.xhtml
+++ b/src/main/webapp/content/msg-stat.xhtml
@@ -52,7 +52,7 @@
             <p:chart type="bar" model="#{statisticsController.mostActiveUsersBarChartModel}" style="height:300px"/>
         </div>
         
-        <span class="subtitle">Legtöbb üzenetet tartalmaző beszélgetések</span>
+        <span class="subtitle">Legtöbb üzenetet tartalmazó beszélgetések</span>
         
         <h:dataTable
             value="#{statisticsController.getMostActiveChats()}"
